Send Notification[OneSignal]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,16 @@
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/'}
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.6, 0.99.99]'
+    }
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+repositories {
+    maven { url 'https://maven.google.com' }
+}
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 android {
@@ -12,6 +25,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                onesignal_app_id: '8db385c6-e114-4e60-ac62-5385f9204772',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+        ]
     }
 
     buildTypes {
@@ -39,5 +57,6 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:2.2.0'
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.onesignal:OneSignal:[3.13.0, 3.99.99]'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
